# subsetix_kokkos

./: .gitignore  3D.md  AGENTS.md  All_kokkos.md  CMakeLists.txt  CMakePresets.json  FIELD_UPGRADE_SUMMARY.md  TODO.md  box.vtk  box_field.vtk  checkerboard.vtk  checkerboard_field.vtk  codex  codex1  codex2  command  disk.vtk  disk_field.vtk  mach2_profile.ncu-rep  plan.md  random.vtk  random_field.vtk
benchmarks/: CMakeLists.txt  csr_field_ops_bench.cpp  csr_field_ops_benchmark.cpp  csr_intersection_bench.cpp  csr_morphology_benchmark.cpp  csr_set_algebra_benchmark.cpp  csr_set_transform_benchmark.cpp  csr_threshold_benchmark.cpp  csr_transform_bench.cpp  kokkos_dummy_benchmark.cpp  multilevel_overhead_benchmark.cpp
docs/: fvd_api_analysis.md  fvd_api_graph_integration.md  fvd_api_next_steps_design.md  fvd_gpu_sync_analysis.md  fvd_layer_proposal.md  fvd_layer_proposal_v2.md  fvd_layer_proposal_v3.1.md  fvd_layer_proposal_v3.md  fvd_mpi_api_proposal.md  fvd_mpi_api_summary.md  fvd_mpi_implementation_summary.md
examples/: CMakeLists.txt  README.md  amr_field_restrict_prolong_to_vtk.cpp  csr_bitmap_to_vtk.cpp  csr_generators_to_vtk.cpp  csr_morphology_to_vtk.cpp  csr_set_ops_to_vtk.cpp  example_output.hpp  field_mask_fill_to_vtk.cpp  field_stencil_smoothing_to_vtk.cpp  field_subview_overlap_stencil.cpp  field_subview_workflow.cpp  fvd_graph_api_comparison.cpp  fvd_mach2_cylinder_example.cpp  fvd_mpi_simulation_examples.cpp  fvd_simulation_examples.cpp  mach2.md  multilevel_amr_demo.cpp  output.pbm  set_algebra_masks_to_vtk.cpp  threshold_to_vtk.cpp
examples/amr_advection/: amr_advection_2d.cpp
examples/assets/: smiley.pbm
examples/mach2_cylinder/: mach2_cylinder.cpp
examples/smoke_plume/: smoke_plume.cpp
include/subsetix/: benchmark_sizes.hpp  csr_backend.hpp  csr_field.hpp  csr_field_ops.hpp  csr_interval_set.hpp  csr_interval_subset.hpp  csr_mapping.hpp  csr_set_ops.hpp  field.hpp  geometry.hpp  io.hpp  multilevel.hpp  tiled_interval_set.hpp  vtk_export.hpp
include/subsetix/csr_ops/: amr.hpp  core.hpp  field_algebra.hpp  field_amr.hpp  field_arith.hpp  field_core.hpp  field_remap.hpp  field_stencil.hpp  field_subset.hpp  field_subview.hpp  fluent_ops.hpp  morphology.hpp  threshold.hpp  transform.hpp  workspace.hpp
include/subsetix/detail/: csr_utils.hpp  memory_utils.hpp  scan_utils.hpp
include/subsetix/field/: csr_field.hpp  csr_field_ops.hpp
include/subsetix/fvd/: fvd_integrators.hpp
include/subsetix/fvd/amr/: refinement_criteria.hpp
include/subsetix/fvd/boundary/: time_dependent_bc.hpp
include/subsetix/fvd/flux/: flux_schemes.hpp
include/subsetix/fvd/geometry/: csr_types.hpp  geometry_builder.hpp
include/subsetix/fvd/mpi/: comm_manager.hpp  decomposition.hpp  fvd_mpi.hpp  load_balance.hpp  mpi_concepts.hpp  mpi_config.hpp  mpi_stub.hpp  observer_mpi.hpp  topology.hpp
include/subsetix/fvd/output/: field_view.hpp
include/subsetix/fvd/reconstruction/: reconstruction.hpp
include/subsetix/fvd/solver/: adaptive_solver.hpp  adaptive_solver_mpi.hpp  boundary_generic.hpp  observer.hpp  solver_aliases.hpp  solver_aliases_v2.hpp
include/subsetix/fvd/sources/: source_terms.hpp
include/subsetix/fvd/system/: concepts.hpp  concepts_v2.hpp  euler2d.hpp
include/subsetix/fvd/time/: time_integrators.hpp
include/subsetix/geometry/: csr_backend.hpp  csr_interval_set.hpp  csr_interval_subset.hpp  csr_mapping.hpp  csr_set_ops.hpp
include/subsetix/io/: vtk_export.hpp
include/subsetix/multilevel/: multilevel.hpp
presentation/: section_algorithms.typ  section_appendices.typ  section_context.typ  section_data_structures.typ  section_demo.typ  section_sparse.typ  slides.typ  theme.typ
src/: CMakeLists.txt
tests/: CMakeLists.txt  csr_amr_refine_project_smoke_test.cpp  csr_amr_refine_project_test.cpp  csr_builders_smoke_test.cpp  csr_builders_test.cpp  csr_csr_test_utils.hpp  csr_difference_components_smoke_test.cpp  csr_difference_components_test.cpp  csr_difference_smoke_test.cpp  csr_field_algebra_smoke_test.cpp  csr_field_algebra_test.cpp  csr_field_amr_ops_smoke_test.cpp  csr_field_api_compat_test.cpp  csr_field_new_smoke_test.cpp  csr_field_ops_smoke_test.cpp  csr_field_ops_test.cpp  csr_field_remap_smoke_test.cpp  csr_field_smoke_test.cpp  csr_field_stencil_smoke_test.cpp  csr_field_stencil_subset_test.cpp  csr_field_stencil_test.cpp  csr_field_subview_smoke_test.cpp  csr_field_subview_test.cpp  csr_fluent_ops_smoke_test.cpp  csr_intersection_components_smoke_test.cpp  csr_intersection_components_test.cpp  csr_intersection_smoke_test.cpp  csr_interval_set_smoke_test.cpp  csr_interval_set_test.cpp  csr_interval_subset_smoke_test.cpp  csr_interval_subset_test.cpp  csr_morphology_smoke_test.cpp  csr_row_ops_components_smoke_test.cpp  csr_row_ops_test_utils.hpp  csr_set_algebra_properties_test.cpp  csr_symmetric_difference_smoke_test.cpp  csr_test_utils.hpp  csr_threshold_smoke_test.cpp  csr_translation_smoke_test.cpp  csr_union_components_smoke_test.cpp  (+12 more)
tools/kp_timeline/: kp_timeline.cpp
